--- a/modules/wordpress/templates/wp-config.php.erb
+++ b/modules/wordpress/templates/wp-config.php.erb
@@ -37,6 +37,9 @@ define( 'DB_CHARSET', 'utf8' );
 /** The database collate type. Don't change this if in doubt. */
 define( 'DB_COLLATE', '' );
 
+define('WP_HOME','http://192.168.33.10');
+define('WP_SITEURL','http://192.168.33.10');
+
 /**#@+
  * Authentication unique keys and salts.
  *
